--- a/atkm/src/app/shared/components/sidebar-config/sidebar-config.component.html
+++ b/atkm/src/app/shared/components/sidebar-config/sidebar-config.component.html
@@ -1,10 +1,11 @@
 <aside class="config-panel" [class.collapsed]="isCollapsed" [class.expanded]="!isCollapsed">
   <button class="config-toggle" (click)="onToggle()"
     [attr.aria-label]="isCollapsed ? 'Ouvrir configuration' : 'Fermer configuration'">
-    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-      <path
-        d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872L9.405 1.05zM8 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
-    </svg>
+    @if (!isCollapsed) {
+    <span class="toggle-arrow right">▶</span>
+    } @else {
+    <span class="toggle-arrow left">◀</span>
+    }
   </button>
   <!-- @if (!isCollapsed) { -->
   <div class="config-content">
