atk.core (02) - html (03) > side toggle (03) -------------------------------------------- refactor: update navbar and content components to use config directly; set components as standalone

--- a/atkm/src/app/features/landing/landing.component.html
+++ b/atkm/src/app/features/landing/landing.component.html
@@ -1,7 +1,7 @@
 @if (config) {
 <div class="main-container" [class.config-collapsed]="config?.configPanel?.isCollapsed">
   <!-- GRILLE 1: MENU PRINCIPAL (gauche) -->
-  <atk-navbar-main [config]="config.navbar" />
+  <atk-navbar-main [config]="config" />
 
   <!-- GRILLE 2: ZONE CENTRALE TRANSPARENTE (centre) -->
   <!-- <atk-navbar-brand [config]="config.navbar" /> -->
