--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -7,7 +7,7 @@
     </svg>
   </button>
 
-  <a class="logo" [href]="config?.logo?.link || '#'" aria-label="Homepage">
+  <a class="logo" [href]="config?.navbar?.logo?.link || '#'" aria-label="Homepage">
     <svg aria-hidden="true" height="40" viewBox="0 0 32 32" version="1.1" width="40">
       <defs>
         <style>
@@ -22,7 +22,7 @@
   </a>
 
   <nav role="navigation" aria-label="ATK Breadcrumb">
-    <span *ngFor="let item of config?.breadcrumb || []; let last = last">
+    <span *ngFor="let item of config?.navbar.breadcrumb || []; let last = last">
       {{item}}
     </span>
   </nav>
