atk.core (02) - html (03) > side toggle (04) -------------------------------------------- Refactor landing page layout and components : - Changed the main container class to landing-container for better semantic structure. - Updated navbar-brand component to accept configPanelCollapsed and ILandingConfig. - Adjusted navbar-main component to remove dependency on navbar-brand. - Modified navbar-tools component to remove unnecessary imports. - Enhanced sidebar-config component with improved structure and styling. - Updated landing-data.json to include new repository sections. - Refined styles in styles.css for better responsiveness and layout adjustments.

--- a/atkm/src/app/features/landing/landing.component.html
+++ b/atkm/src/app/features/landing/landing.component.html
@@ -1,10 +1,10 @@
 @if (config) {
-<div class="main-container" [class.config-collapsed]="config?.configPanel?.isCollapsed">
+<div class="landing-container" [class.config-collapsed]="config?.configPanel?.isCollapsed">
   <!-- GRILLE 1: MENU PRINCIPAL (gauche) -->
   <atk-navbar-main [config]="config" />
 
   <!-- GRILLE 2: ZONE CENTRALE TRANSPARENTE (centre) -->
-  <!-- <atk-navbar-brand [config]="config.navbar" /> -->
+  <atk-navbar-brand [config]="config" />
 
   <!-- GRILLE 3: OUTILS UTILISATEUR (droite) -->
   <atk-navbar-tools [configPanelCollapsed]="config?.configPanel?.isCollapsed" />
@@ -14,11 +14,12 @@
   <atk-sidebar-nav [config]="config.sidebar" />
 
   <!-- GRILLE 5: CONTENU PRINCIPAL (centre) -->
-  <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="config?.configPanel?.isCollapsed" />
-
   <!-- GRILLE 6: PANNEAU CONFIGURATION (droite) -->
-  <atk-sidebar-config [sections]="config.configPanel.sections" [isCollapsed]="config.configPanel.isCollapsed"
-    (togglePanel)="toggleConfigPanel()" />
+  <div class="main-container">
+    <atk-content-main [feeds]="config.feeds" [configPanelCollapsed]="config?.configPanel?.isCollapsed" />
+    <atk-sidebar-config [sections]="config.configPanel.sections" [isCollapsed]="config.configPanel.isCollapsed"
+      (togglePanel)="toggleConfigPanel()" />
+  </div>
 </div>
 } @else {
 <!-- Loading state -->
