--- a/atkm/src/app/shared/components/content-main/content-main.component.html
+++ b/atkm/src/app/shared/components/content-main/content-main.component.html
@@ -1,5 +1,5 @@
-<main class="main-content" [class.config-collapsed]="configPanelCollapsed">
-  <div class="content-wrapper">
+<main class="main-content">
+  <div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
     <div class="main-header">
       <h1>Home</h1>
     </div>
@@ -12,7 +12,7 @@
 
       <div class="copilot-suggestions">
         <button class="suggestion-btn" (click)="handleSuggestion('profile')">
-          <div style="color: #ff79c6;">
+          <div class="suggestion-btn-icon" style="color: #ff79c6;">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
                 d="M14.064 0h.186C15.216 0 16 .784 16 1.75v.186a8.752 8.752 0 0 1-2.564 6.186l-.458.459c-.314.314-.641.616-.979.904v3.207c0 .608-.315 1.172-.833 1.49l-2.774 1.707a.749.749 0 0 1-1.11-.418l-.954-3.102a1.214 1.214 0 0 1-.145-.125L3.754 9.816a1.218 1.218 0 0 1-.124-.145L.528 8.717a.749.749 0 0 1-.418-1.11l1.71-2.774A1.748 1.748 0 0 1 3.31 4h3.204c.288-.338.59-.665.904-.979l.459-.458A8.749 8.749 0 0 1 14.064 0Z">
@@ -23,7 +23,7 @@
         </button>
 
         <button class="suggestion-btn" (click)="handleSuggestion('explain')">
-          <div style="color: #8b5cf6;">
+          <div class="suggestion-btn-icon" style="color: #8b5cf6;">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.22.149-.41.242-.522.3a.727.727 0 0 0-.076.039l-.002.001h-.001a.75.75 0 0 1-.592-1.378c.074-.029.18-.07.281-.119.099-.048.177-.094.232-.143.059-.051.088-.09.106-.113.024-.029.057-.09.057-.188 0-.24-.086-.49-.287-.64C8.471 5.67 8.256 5.5 8 5.5c-.369 0-.597.09-.74.187a1.028 1.028 0 0 0-.34.398ZM8 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z">
@@ -34,7 +34,7 @@
         </button>
 
         <button class="suggestion-btn" (click)="handleSuggestion('code')">
-          <div style="color: #10b981;">
+          <div class="suggestion-btn-icon" style="color: #10b981;">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
                 d="m11.28 3.22 4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L13.94 8 10.22 4.28a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215Zm-6.56 0a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L2.06 8l3.72 3.72a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L.47 8.53a.75.75 0 0 1 0-1.06Z">
@@ -56,7 +56,7 @@
           <button class="filter-btn" (click)="handleFilter(feed.id)">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
-                d="M7.75 8a.75.75 0 0 0 0 1.5h4.5a.75.75 0 0 0 0-1.5h-4.5ZM5 12.75a.75.75 0 0 1 .75-.75h2.5a.75.75 0 0 1 0 1.5h-2.5a.75.75 0 0 1-.75-.75Zm-1.5-4a.75.75 0 0 0 0-1.5h-.75a.75.75 0 0 0 0 1.5h.75ZM3 11.25a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 0 1.5h-.5a.75.75 0 0 1-.75-.75Z">
+                d="M.75 3h14.5a.75.75 0 0 1 0 1.5H.75a.75.75 0 0 1 0-1.5ZM3 7.75A.75.75 0 0 1 3.75 7h8.5a.75.75 0 0 1 0 1.5h-8.5A.75.75 0 0 1 3 7.75Zm3 4a.75.75 0 0 1 .75-.75h2.5a.75.75 0 0 1 0 1.5h-2.5a.75.75 0 0 1-.75-.75Z">
               </path>
             </svg>
             Filter
@@ -69,7 +69,7 @@
           <div class="feed-item">
             <div class="feed-item-header">
               <div class="feed-item-header-title">
-                <img [src]="item.avatar" alt="Avatar" class="avatar" width="18" height="18" />
+                <img [src]="item.avatar" alt="Avatar" class="avatar" width="16" height="16" />
                 <span [innerHTML]="item.action"></span>
               </div>
               <span class="feed-time">{{item.time}}</span>
